--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
 
     <div>
-        <h2>Website Features</h2>
+        <h2>Website Features as follow</h2> <!--I add words here-->
         <ul>
             <li>This website has multiple sections.</li>
             <li>The website is written in simple HTML.</li>
